3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

common/object.c: Modify can_pick() so you are not allowed to pick up
  multipart objects.  insert_ob_in_ob() doesn't let it happen, but
  this way, at least the player gets a message.  Also cleaned up function
  so it is easier to read.
MSW 2007-09-26

Adding the minor, medium and major Potions of Life to the treasure list so
they can be found in shops, dungeons, et al.
--
server/branches/1.x/lib/treasures
--
RJT 2007-09-26

Renamed "potion of invulnerability" to "potion of shielding." Hopefully this
will remove player confusion as to why one takes damage from all attack types
(except physical) when drinking this potion.
--
arch/trunk/potion/potioninv.arc
maps/trunk/pup_land/begin/adv
server/trunk/lib/treasures
---
RJT 2007-09-26

common/loader.l:  Add artifact_init check to check_loaded_object() - if set
  don't do processing.  This has been in the trunk for 9 months, without
  any problems observed.  Fixes bug 1727944 - horn of plenty shoots bullets -
  what happens now is the artifacts are 'fixed' in check_loaded_objects(),
  with magic bullet getting added to them.
MSW 2007-09-25

Add support for periodic updating of hiscore information for players - fixes
bug 1735262.  Main change was to modify check_score() to take a flag that
determines if messages related to high score placement should be displayed
or not.
--
include/sproto.h: Rebuilt because of change to check_score()
server/apply.c: Change calls to check_score() to take quiet flag.
server/c_wiz.c: Change calls to check_score() to take quiet flag.
server/hiscore.c: Modify check_score to take quiet flag, update function
  not to print messages if it is set.